--- a/templates/lieder-theme/singers/singer_emm_table.html
+++ b/templates/lieder-theme/singers/singer_emm_table.html
@@ -2,7 +2,7 @@
 
 {% get_singers as singers %}
 
-<table>
+<table class="singer-emm-table">
 <tbody>
 <tr>
     <td><h2>{% trans "Sopranos" %}</h2></td>
