--- a/templates/lieder-theme/articles/article_detail.html
+++ b/templates/lieder-theme/articles/article_detail.html
@@ -5,7 +5,11 @@
 {% block content %}
 <div id="content">
  <div id="article-{{ object.section.slug }}-detail">
-  <div id="article-{{ object.slug }}">
+  <div id="article-{{ object.slug }}-obj-detail">
+
+{% if object.show_title %}
+    <h1>{{ object.name }}</h1>
+{% endif %}
 
 {% if object.image %}
     <img src="{{ object.get_image_url }}" alt="{{ object.name }}" height="{{ object.get_image_height }}"
