--- a/templates/lieder-theme/articles/enregistraments_detail.html
+++ b/templates/lieder-theme/articles/enregistraments_detail.html
@@ -3,17 +3,20 @@
 
 {% block content %}
 <div id="content">
-    <div id="taulaenregistrament">
-        {% show_enregistraments_list %}
-    </div>
+ <div id="article-{{ object.section.slug }}-detail">
+  <div id="article-{{ object.slug }}-obj-detail">
+    {% show_enregistraments_list %}
+  </div>	
+ </div>	
 </div>	
 {% endblock %}
 
+
 {% block sidebar %}
 <div id="sidebar">
- <div id="sidebar-menu">{% include "menus/get-menu-vert.html" %}</div>
+    <div class="menu-vert">{% include "menus/get-menu-vert.html" %}</div>
 
-    <div id="{{object.slug}}" class="songlist-on-sidebar">
+    <div class="{{object.slug}} songlist">
         {% if object.image %}
         <img src="{{ object.get_image_url }}" alt="{{ object.name }}" height="74" width="74"/>
         {% endif %}
