--- a/templates/lieder-theme/articles/enregistraments_list.html
+++ b/templates/lieder-theme/articles/enregistraments_list.html
@@ -1,31 +1,10 @@
 {% extends "base.html" %}
-{% load i18n %}
+{% load i18n articletags %}
 
 {% block content %}
 <div id="content">
-
-
-<div id="taulaenregistrament">
-
-<table>
-{% for article in object_list %}
-    {% cycle <tr>,<!--jump-this--> %}
-    <td>
-      {% comment %}
-            <a href="{{ article.get_absolute_url }}" onclick="window.open(this.href,'newwin',
-             'width=450,height=450'); return false;">
-      {% endcomment %}
-      <a href="{{ article.get_absolute_url }}">
-      <img class="enregistraments" src="{{ article.get_image_url }}" alt="{{ article.name }}"
-      height="{{ article.get_image_height }}" width="{{ article.get_image_width }}" />
-      </a>
-      <h3>{{ article.name }}</h3>
-      {% if article.intro %}{{ article.intro }}{% endif %}
-    </td>
-    {% cycle <!--jump-this-->,</tr> %}
-{% endfor %}
-</table>
-
+ <div id="article-{{ object_list.0.section.slug }}-list">
+    {% show_enregistraments_list %}
 </div>
 </div>	
 {% endblock %}
