Two new tags in RequestContext: 'site_url' and 'media_url'. Templates now use this.

--- a/templates/lieder-theme/articles/premsa.html
+++ b/templates/lieder-theme/articles/premsa.html
@@ -2,8 +2,8 @@
 {% load i18n %}
 
 {% block script %}
-<script type="text/javascript" src="/media-lieder/js/getElementsBySelector.js"></script>
-<script type="text/javascript" src="/media-lieder/js/linkPopUp.js"></script>
+<script type="text/javascript" src="{{media_url}}js/getElementsBySelector.js"></script>
+<script type="text/javascript" src="{{media_url}}js/linkPopUp.js"></script>
 {% endblock %}
 
 
