--- a/templates/lieder-theme/documents/documentcategory_detail.html
+++ b/templates/lieder-theme/documents/documentcategory_detail.html
@@ -8,7 +8,7 @@
 <div class="document-{{object.slug}}">
 
 	<h2><a href="{{ docu.get_file_url }}">
-        <img class="icon" src="/media-lieder/img/pictopremsa.png" alt="pictopremsa" width="21" height="21" />
+        <img class="icon" src="{{media_url}}img/pictopremsa.png" alt="pictopremsa" width="21" height="21" />
         {{ docu.name }}</a></h2>
         <p>
 	{% if docu.description %}
