--- a/templates/lieder-theme/menus/menu_ul_emm.html
+++ b/templates/lieder-theme/menus/menu_ul_emm.html
@@ -8,7 +8,7 @@
     {% else %} <li>
     {% endifequal %}
     <a href="{{ item.0 }}">
-    <img src="/media-lieder/img/quadrattronja.png" width="15" height="9" />{{ item.1|lower }}
+    <img src="{{media_url}}img/quadrattronja.png" width="15" height="9" />{{ item.1|lower }}
     </a></li>
 {% endfor %}
 </ul>
