--- a/templates/lieder-theme/admin/base_site.html
+++ b/templates/lieder-theme/admin/base_site.html
@@ -6,7 +6,7 @@
 {% block branding %}
 <h1 id="site-name">{% trans 'Lieder WebSite administration' %}</h1>
 <h2 id="site-url"><a
-href="http://lieder.terraquis.net/">lieder.terraquis.net</a></h2>
+href="http://www.corliedercamera.com/">www.corliedercamera.com</a></h2>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
