--- a/templates/lieder-theme/500.html
+++ b/templates/lieder-theme/500.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div id="content">
-	<h2>Pàgina no trobada.</h2>
-        <p>Ho sentim, la pàgina no s'ha pogut trobar. Poseu-vos en contacte amb nosaltres si us cal més informació.
+    <h2>Problemes en generar la pàgina.</h2>
+        <p>Ho sentim, hi ha un problema en generar aquesta pàgina. Poseu-vos en contacte amb nosaltres si us cal més informació.
         </p> 
         <a href="mailto:manager&#64;corliedercamera.com">manager&#64;corliedercamera.com</a>
 </div>
